namespaces/apps/n8n/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: n8n

spec:
    selector:
        app: n8n
    ports:
        - name: http
          port: 5678
          targetPort: http
    type: ClusterIP
