namespaces/apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: n8n
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
    ingressClassName: traefik
    rules:
        - host: n8n.wacky.homes
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: n8n
                            port:
                                name: http
        - host: n8n.wacky.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: n8n
                            port:
                                name: http
