namespaces/apps/n8n/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
    name: n8n

spec:
    podSelector:
        matchLabels:
            app: n8n
    policyTypes:
        - Ingress
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: kube-system
                podSelector:
                    matchLabels:
                        app.kubernetes.io/name: traefik
          ports:
              - protocol: TCP
                port: 5678
